--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 
 target/
 
+build/
+
+.gradle
+
 .settings/org.eclipse.wst.common.project.facet.core.xml
 
 .settings/org.eclipse.jdt.core.prefs
@@ -14,3 +18,5 @@ target/
 .DS_Store
 
 nb-configuration.xml
+
+gradlew.bat
