rename group name and set new version
this repo will move to ‘agile’

--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'jdepend'
 
-group = 'me.donnior'
-version = '1.2'
+group = 'org.agilej'
+version = '0.1'
 
 description = """fava"""
 
