--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,30 @@ version = '0.1'
 
 description = """fava"""
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 
 
-repositories {
-        
-     mavenRepo url: "http://repo.maven.apache.org/maven2"
+repositories {  
+    mavenLocal()
+    mavenCentral()
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4'
+}
+
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version:'4.8.2'
+}
+
+
+if (JavaVersion.current().isJava8Compatible()) {
+  allprojects {
+    tasks.withType(Javadoc) {
+      options.addStringOption('Xdoclint:none', '-quiet')
+    }
+  }
 }
